<resources>
    <string name="app_name">WTP: Hunny Climb </string>
    <string name="game_title">Winne-the-Poo: Hunny Climb</string>
    <string name="action_roll">Roll</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="action_stop">Stop</string>

    <string name="game_intro">You spot honey near the top of the tree</string>

    <string name="dice_one">1</string>
    <string name="dice_two">2</string>

    <string name="add_one">Add one</string>
    <string name="subtract_one">Subtract one</string>
    <string name="roll">Roll</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>

    <string name="return_button">Return to menu</string>

    <!-- Dialog title -->
    <string name="pick_roll_length">Roll length?</string>

    <!-- Dialog list options -->
    <string-array name="length_array">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>
</resources>

