<!-- activity_intro.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/game_title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/easyButton"
        android:text="@string/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/normalButton"
        android:text="@string/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/hardButton"
        android:text="@string/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
